# rocq-tools

./: .gitignore  .nra.cache  README.md  STATUS.md  dune-project  rocq-tools.opam
.github/workflows/: ci.yml  pages.yml
configs/: baseline.json  baseline_fable.json  ctx_full_fable.json  ctx_lean_ex_fable.json  ctx_lean_fable.json  frozen.json  session.json  session_try.json  session_try_compact.json  session_try_hints.json  session_try_hints_auto.json  session_try_hints_auto_sonnet.json  session_try_hints_auto_sugg.json  session_try_hints_v2.json  session_try_search.json  sonnet_native.json  sonnet_native_auto2.json  unified.json  unified_sonnet.json  universal.json  universal_fable.json  universal_sonnet.json  winner_auto2.json  winner_autofix.json  winner_ctx_full.json  winner_ctx_lean.json  winner_ctx_lean_ex.json  winner_ctx_lean_ssr.json
data/manifests/: README.md  dev150.jsonl  dev60.jsonl  minif2f_valid.jsonl  smoke5.jsonl
docs/: ASSUMPTIONS.md  DESIGN.md  FAILURE_ATLAS.md  PAUSED.md  PAUSED_QUEUE.md  REPORT.md  TASK.md
harness/: common.py  dashboard.py  datasets.py  gate.py  make_manifests.py  monitor.py  replay_counterfactual.py  report.py  run_eval.py  run_team.py
repro/: opam-packages.txt
site/: index.html
src/baseline_server/: dune  rocq_agent_baseline.ml
src/mcp_core/: dune  mcp_server.ml  proc.ml
src/psession/: dune  rocq_agent_daemon.ml  rocq_driver.ml
src/session_server/: dune  rocq_agent_session.ml  rocq_driver.ml
test/: ARCHITECTURE.md  helpers.ml  test_daemon.ml  test_session.ml
