(executable
 (name rocq_agent_shim)
 (public_name rocq-mcp-shim)
 (package rocq-tools)
 (modules rocq_agent_shim)
 (libraries mcp_core yojson unix))

(executable
 (name rocq_agent_daemon)
 (public_name rocq-mcp-daemon)
 (package rocq-tools)
 (modules rocq_agent_daemon rocq_driver)
 (libraries
  yojson
  unix
  str
  rocq-runtime.boot
  rocq-runtime.clib
  rocq-runtime.lib
  rocq-runtime.kernel
  rocq-runtime.library
  rocq-runtime.engine
  rocq-runtime.proofs
  rocq-runtime.printing
  rocq-runtime.parsing
  rocq-runtime.gramlib
  rocq-runtime.coqargs
  rocq-runtime.sysinit
  rocq-runtime.vernac))
